--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-fastapi
-uvicorn
-psycopg2-binary
-pydantic
-requests
-lxml
-beautifulsoup4
+fastapi==0.115.0
+uvicorn==0.30.6
+requests==2.32.3
+lxml==5.3.0
