--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-fastapi==0.115.0
-uvicorn==0.30.6
-requests==2.32.3
-lxml==5.3.0
-openpyxl
-pandas
+# פתח requirements.txt והחלף הכל:
+fastapi
+uvicorn[standard]
+requests
 beautifulsoup4
+lxml
