--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-# פתח requirements.txt והחלף הכל:
-fastapi
-uvicorn[standard]
-requests
-beautifulsoup4
-lxml
-cloudscraper
-
+fastapi==0.104.1
+uvicorn==0.24.0
+requests==2.31.0
+python-multipart==0.0.6
